debugged url path

--- a/_config.yml
+++ b/_config.yml
@@ -3,7 +3,7 @@
 
 title: The Daily Spatial
 description: A spatial blog for spatial people. # this means to ignore newlines until "baseurl:"
-baseurl: "" # the subpath of your site, e.g. /blog
+baseurl: "/dailyspatial" # the subpath of your site, e.g. /blog
 url: "" # the base hostname & protocol for your site, e.g. http://example.com
 
 
