--- a/_config.yml
+++ b/_config.yml
@@ -9,8 +9,8 @@ url: "" # the base hostname & protocol for your site, e.g. http://example.com
 
 #-------------------------------
 # About Section
-author-name:  Kilian Feess
-author-avatar: pc.png
+author-name:  Spatial Observer
+author-avatar:
 
 
 #-------------------------------
